# geode-object-groups

./: .gitignore  CMakeLists.txt  Configuring Object Groups.md  README.md  about.md  changelog.md  config.json  gallery.md  mod.json
.github/workflows/: multi-platform.yml
src/: config.hpp  fileUtils.cpp  groups.cpp  main.cpp
